// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/modals/ErrorModal Default 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderTopEndRadius": 30.76923076923077,
          "borderTopStartRadius": 30.76923076923077,
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "zIndex": 10,
        },
        Object {
          "height": 0,
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
    testID="bottom-modal-test-id"
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "opacity": 0,
          }
        }
      />
      <RCTScrollView
        scrollEnabled={false}
        showsVerticalScrollIndicator={false}
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "marginHorizontal": 30.76923076923077,
                "paddingBottom": 25.28909952606635,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={350.88625592417065}
              bbWidth={350.88625592417065}
              focusable={false}
              height={350.88625592417065}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 350,
                    "width": 350,
                  },
                ]
              }
              vbHeight={222}
              vbWidth={222}
              width={350.88625592417065}
            >
              <RNSVGGroup>
                <RNSVGPath
                  clipRule={0}
                  d="M143.154 6.64H78.846c-4.178 0-6.962.005-9.098.186-2.066.174-3.008.482-3.605.798a8.461 8.461 0 0 0-3.519 3.518c-.316.598-.624 1.54-.798 3.606-.18 2.135-.185 4.919-.185 9.097v162.31c0 4.179.005 6.962.185 9.097.174 2.067.482 3.008.798 3.605a8.464 8.464 0 0 0 3.52 3.519c.596.316 1.538.624 3.604.798 2.136.181 4.92.185 9.098.185h64.308c4.178 0 6.962-.004 9.098-.185 2.066-.174 3.008-.482 3.605-.798a8.46 8.46 0 0 0 3.518-3.519c.317-.597.625-1.538.799-3.605.18-2.135.185-4.918.185-9.097V23.845c0-4.179-.005-6.962-.185-9.097-.174-2.067-.482-3.008-.799-3.606a8.456 8.456 0 0 0-3.518-3.518c-.597-.316-1.539-.624-3.605-.798-2.136-.18-4.92-.185-9.098-.185ZM57.639 8.504C56 11.6 56 15.681 56 23.845v162.31c0 8.164 0 12.246 1.64 15.342a14.105 14.105 0 0 0 5.864 5.864C66.6 209 70.682 209 78.846 209h64.308c8.164 0 12.247 0 15.342-1.639a14.104 14.104 0 0 0 5.865-5.864C166 198.401 166 194.319 166 186.155V23.845c0-8.164 0-12.246-1.639-15.342a14.101 14.101 0 0 0-5.865-5.864C155.401 1 151.318 1 143.154 1H78.846C70.682 1 66.6 1 63.504 2.64a14.102 14.102 0 0 0-5.865 5.863Z"
                  fill={4290624957}
                  fillRule={0}
                  propList={
                    Array [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
                <RNSVGGroup
                  opacity={0.2}
                >
                  <RNSVGCircle
                    cx={111}
                    cy={101}
                    fill={4291180339}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    r={67}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGCircle
                    cx={111}
                    cy={101}
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    r={67}
                  />
                </RNSVGGroup>
                <RNSVGForeignObject
                  height="100%"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGImage
                    align="xMidYMid"
                    height="100%"
                    meetOrSlice={0}
                    src={
                      Object {
                        "testUri": "../../../src/assets/images/shadow.png",
                      }
                    }
                    width="100%"
                    x={0}
                    y={0}
                  />
                </RNSVGForeignObject>
                <RNSVGPath
                  d="M98.914 130.614a3.53 3.53 0 0 0 1.643-.405c.54-.253 1.155-.683 1.846-1.291l9.278-8.124h14.31c2.444 0 4.568-.49 6.371-1.468a10.332 10.332 0 0 0 4.172-4.202c.977-1.805 1.466-3.932 1.466-6.378V89.434c0-2.447-.489-4.573-1.466-6.378a10.164 10.164 0 0 0-4.172-4.177c-1.803-.995-3.927-1.493-6.371-1.493H96.335c-2.46 0-4.593.498-6.396 1.493-1.787.979-3.177 2.371-4.172 4.177-.977 1.805-1.466 3.931-1.466 6.378v19.312c0 2.446.505 4.573 1.517 6.378 1.028 1.805 2.402 3.206 4.12 4.202 1.737.978 3.667 1.468 5.79 1.468h.506v6.833c0 .912.236 1.637.708 2.177s1.13.81 1.972.81Zm12.287-28.373c-1.938 0-2.967-.962-3.085-2.885l-.404-9.138c-.051-1.012.244-1.83.885-2.455.64-.624 1.5-.936 2.579-.936 1.061 0 1.913.32 2.553.962.657.624.969 1.434.936 2.43l-.43 9.111c-.118 1.941-1.13 2.911-3.034 2.911Zm0 8.935c-1.045 0-1.922-.287-2.629-.861-.708-.591-1.062-1.384-1.062-2.379 0-.979.354-1.755 1.062-2.329.707-.59 1.584-.886 2.629-.886 1.062 0 1.938.296 2.629.886.691.574 1.037 1.35 1.037 2.329 0 1.012-.354 1.805-1.062 2.379-.691.574-1.559.861-2.604.861Z"
                  fill={4291180339}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGCircle
                  cx={111.001}
                  cy={191.385}
                  fill={4290624957}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  r={7.051}
                />
                <RNSVGRect
                  fill={4290624957}
                  height={4.231}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rx={2.115}
                  width={20.449}
                  x={101.129}
                  y={10.166}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              style={
                Object {
                  "marginBottom": 37.93364928909953,
                  "marginTop": 50.5781990521327,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                numberOfLines={0}
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "DIN2014-Demi",
                      "fontSize": 24,
                      "fontWeight": "600",
                      "lineHeight": 32,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-error-title"
              >
                This is error title
              </Text>
              <Text
                adjustsFontSizeToFit={false}
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "DIN2014-Demi",
                      "fontSize": 16,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-error-message"
              >
                This is error message
              </Text>
            </View>
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30.76923076923077,
                    "flexDirection": "row",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  Object {
                    "elevation": 5,
                    "shadowColor": "#333333",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 7.6923076923076925,
                    },
                    "shadowOpacity": 0.07,
                    "shadowRadius": 15.384615384615385,
                  },
                  Array [
                    Object {
                      "height": 92.3076923076923,
                      "width": 565.3846153846154,
                    },
                    Object {
                      "marginTop": 25.28909952606635,
                    },
                  ],
                ]
              }
              testID="error-modal-test-id-close-button"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 30.76923076923077,
                      "flexDirection": "row",
                      "height": "100%",
                      "justifyContent": "center",
                      "width": "100%",
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-close-button-container"
              >
                <Text
                  adjustsFontSizeToFit={true}
                  style={
                    Array [
                      Object {
                        "color": "#333333",
                        "fontFamily": "DIN2014-Demi",
                        "fontSize": 18,
                        "lineHeight": 28,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#C63733",
                      },
                    ]
                  }
                  testID="error-modal-test-id-close-button-text"
                >
                  ErrorModal.close
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "backgroundColor": "#717171",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
          "zIndex": 1,
        },
        undefined,
        Object {
          "opacity": 0,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "height": "100%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Storyshots components/modals/ErrorModal Full Screen 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FAFAFA",
          "borderTopEndRadius": 30.76923076923077,
          "borderTopStartRadius": 30.76923076923077,
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "zIndex": 10,
        },
        Object {
          "height": 0,
        },
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
    testID="bottom-modal-test-id"
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "opacity": 0,
          }
        }
      />
      <RCTScrollView
        scrollEnabled={false}
        showsVerticalScrollIndicator={false}
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "marginHorizontal": 30.76923076923077,
                "paddingBottom": 25.28909952606635,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={350.88625592417065}
              bbWidth={350.88625592417065}
              focusable={false}
              height={350.88625592417065}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 350,
                    "width": 350,
                  },
                ]
              }
              vbHeight={222}
              vbWidth={222}
              width={350.88625592417065}
            >
              <RNSVGGroup>
                <RNSVGPath
                  clipRule={0}
                  d="M143.154 6.64H78.846c-4.178 0-6.962.005-9.098.186-2.066.174-3.008.482-3.605.798a8.461 8.461 0 0 0-3.519 3.518c-.316.598-.624 1.54-.798 3.606-.18 2.135-.185 4.919-.185 9.097v162.31c0 4.179.005 6.962.185 9.097.174 2.067.482 3.008.798 3.605a8.464 8.464 0 0 0 3.52 3.519c.596.316 1.538.624 3.604.798 2.136.181 4.92.185 9.098.185h64.308c4.178 0 6.962-.004 9.098-.185 2.066-.174 3.008-.482 3.605-.798a8.46 8.46 0 0 0 3.518-3.519c.317-.597.625-1.538.799-3.605.18-2.135.185-4.918.185-9.097V23.845c0-4.179-.005-6.962-.185-9.097-.174-2.067-.482-3.008-.799-3.606a8.456 8.456 0 0 0-3.518-3.518c-.597-.316-1.539-.624-3.605-.798-2.136-.18-4.92-.185-9.098-.185ZM57.639 8.504C56 11.6 56 15.681 56 23.845v162.31c0 8.164 0 12.246 1.64 15.342a14.105 14.105 0 0 0 5.864 5.864C66.6 209 70.682 209 78.846 209h64.308c8.164 0 12.247 0 15.342-1.639a14.104 14.104 0 0 0 5.865-5.864C166 198.401 166 194.319 166 186.155V23.845c0-8.164 0-12.246-1.639-15.342a14.101 14.101 0 0 0-5.865-5.864C155.401 1 151.318 1 143.154 1H78.846C70.682 1 66.6 1 63.504 2.64a14.102 14.102 0 0 0-5.865 5.863Z"
                  fill={4290624957}
                  fillRule={0}
                  propList={
                    Array [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
                <RNSVGGroup
                  opacity={0.2}
                >
                  <RNSVGCircle
                    cx={111}
                    cy={101}
                    fill={4291180339}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    r={67}
                  />
                </RNSVGGroup>
                <RNSVGGroup>
                  <RNSVGCircle
                    cx={111}
                    cy={101}
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    r={67}
                  />
                </RNSVGGroup>
                <RNSVGForeignObject
                  height="100%"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGImage
                    align="xMidYMid"
                    height="100%"
                    meetOrSlice={0}
                    src={
                      Object {
                        "testUri": "../../../src/assets/images/shadow.png",
                      }
                    }
                    width="100%"
                    x={0}
                    y={0}
                  />
                </RNSVGForeignObject>
                <RNSVGPath
                  d="M98.914 130.614a3.53 3.53 0 0 0 1.643-.405c.54-.253 1.155-.683 1.846-1.291l9.278-8.124h14.31c2.444 0 4.568-.49 6.371-1.468a10.332 10.332 0 0 0 4.172-4.202c.977-1.805 1.466-3.932 1.466-6.378V89.434c0-2.447-.489-4.573-1.466-6.378a10.164 10.164 0 0 0-4.172-4.177c-1.803-.995-3.927-1.493-6.371-1.493H96.335c-2.46 0-4.593.498-6.396 1.493-1.787.979-3.177 2.371-4.172 4.177-.977 1.805-1.466 3.931-1.466 6.378v19.312c0 2.446.505 4.573 1.517 6.378 1.028 1.805 2.402 3.206 4.12 4.202 1.737.978 3.667 1.468 5.79 1.468h.506v6.833c0 .912.236 1.637.708 2.177s1.13.81 1.972.81Zm12.287-28.373c-1.938 0-2.967-.962-3.085-2.885l-.404-9.138c-.051-1.012.244-1.83.885-2.455.64-.624 1.5-.936 2.579-.936 1.061 0 1.913.32 2.553.962.657.624.969 1.434.936 2.43l-.43 9.111c-.118 1.941-1.13 2.911-3.034 2.911Zm0 8.935c-1.045 0-1.922-.287-2.629-.861-.708-.591-1.062-1.384-1.062-2.379 0-.979.354-1.755 1.062-2.329.707-.59 1.584-.886 2.629-.886 1.062 0 1.938.296 2.629.886.691.574 1.037 1.35 1.037 2.329 0 1.012-.354 1.805-1.062 2.379-.691.574-1.559.861-2.604.861Z"
                  fill={4291180339}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGCircle
                  cx={111.001}
                  cy={191.385}
                  fill={4290624957}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  r={7.051}
                />
                <RNSVGRect
                  fill={4290624957}
                  height={4.231}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rx={2.115}
                  width={20.449}
                  x={101.129}
                  y={10.166}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              style={
                Object {
                  "marginBottom": 37.93364928909953,
                  "marginTop": 50.5781990521327,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                numberOfLines={0}
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "DIN2014-Demi",
                      "fontSize": 24,
                      "fontWeight": "600",
                      "lineHeight": 32,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-error-title"
              >
                This is full screen error title
              </Text>
              <Text
                adjustsFontSizeToFit={false}
                style={
                  Array [
                    Object {
                      "color": "#333333",
                      "fontFamily": "DIN2014-Demi",
                      "fontSize": 16,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-error-message"
              >
                This is full screen error message
              </Text>
            </View>
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30.76923076923077,
                    "flexDirection": "row",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  Object {
                    "elevation": 5,
                    "shadowColor": "#333333",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 7.6923076923076925,
                    },
                    "shadowOpacity": 0.07,
                    "shadowRadius": 15.384615384615385,
                  },
                  Array [
                    Object {
                      "height": 92.3076923076923,
                      "width": 565.3846153846154,
                    },
                    Object {
                      "marginTop": 25.28909952606635,
                    },
                  ],
                ]
              }
              testID="error-modal-test-id-retry-button"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 30.76923076923077,
                      "flexDirection": "row",
                      "height": "100%",
                      "justifyContent": "center",
                      "width": "100%",
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-retry-button-container"
              >
                <Text
                  adjustsFontSizeToFit={true}
                  style={
                    Array [
                      Object {
                        "color": "#333333",
                        "fontFamily": "DIN2014-Demi",
                        "fontSize": 18,
                        "lineHeight": 28,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#C63733",
                      },
                    ]
                  }
                  testID="error-modal-test-id-retry-button-text"
                >
                  ErrorModal.retry
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30.76923076923077,
                    "flexDirection": "row",
                    "height": "100%",
                    "justifyContent": "center",
                    "width": "100%",
                  },
                  Object {
                    "elevation": 5,
                    "shadowColor": "#333333",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 7.6923076923076925,
                    },
                    "shadowOpacity": 0.07,
                    "shadowRadius": 15.384615384615385,
                  },
                  Array [
                    Object {
                      "height": 92.3076923076923,
                      "width": 565.3846153846154,
                    },
                    Object {
                      "marginTop": 25.28909952606635,
                    },
                  ],
                ]
              }
              testID="error-modal-test-id-close-button"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 30.76923076923077,
                      "flexDirection": "row",
                      "height": "100%",
                      "justifyContent": "center",
                      "width": "100%",
                    },
                    Object {
                      "backgroundColor": "#FFFFFF",
                    },
                    undefined,
                  ]
                }
                testID="error-modal-test-id-close-button-container"
              >
                <Text
                  adjustsFontSizeToFit={true}
                  style={
                    Array [
                      Object {
                        "color": "#333333",
                        "fontFamily": "DIN2014-Demi",
                        "fontSize": 18,
                        "lineHeight": 28,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#C63733",
                      },
                    ]
                  }
                  testID="error-modal-test-id-close-button-text"
                >
                  Custom Primary Button Text
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "backgroundColor": "#717171",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
          "zIndex": 1,
        },
        undefined,
        Object {
          "opacity": 0,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "height": "100%",
          },
        ]
      }
    />
  </View>
</View>
`;
